<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".activity.SiginActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimaryDark"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/iv_cetup_grey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cetup_grey"
        android:contentDescription="@string/cetup" />

    <ImageView
        android:id="@+id/iv_cetup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/cetup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_cetup_grey"
        app:srcCompat="@drawable/cetup_icon" />

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20dp"
        android:layout_marginTop="@dimen/_20dp"
        android:text="@string/welcome"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_cetup" />

    <TextView
        android:id="@+id/tv_word1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5dp"
        android:text="@string/word4"
        app:layout_constraintStart_toStartOf="@+id/tv_welcome"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome" />

    <EditText
        android:id="@+id/et_email_signin"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="@+id/tv_word1"
        app:layout_constraintTop_toBottomOf="@+id/tv_word1" />

    <EditText
        android:id="@+id/et_password_signin"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="@+id/et_email_signin"
        app:layout_constraintTop_toBottomOf="@+id/et_email_signin" />

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/input_email_layout"-->
<!--        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
<!--        android:layout_width="370dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="@dimen/_20dp"-->
<!--        app:layout_constraintStart_toStartOf="@+id/tv_word1"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/tv_word1">-->

<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            android:id="@+id/et_email_signin"-->
<!--            android:layout_width="370dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:hint="@string/username" />-->
<!--    </com.google.android.material.textfield.TextInputLayout>-->

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/input_password_layout"-->
<!--        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
<!--        android:layout_width="370dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="@dimen/_20dp"-->
<!--        app:passwordToggleEnabled="true"-->
<!--        app:layout_constraintStart_toStartOf="@+id/input_email_layout"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/input_email_layout">-->

<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            android:id="@+id/et_password_signin"-->
<!--            android:layout_width="370dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:hint="@string/password" />-->
<!--    </com.google.android.material.textfield.TextInputLayout>-->

    <Button
        android:id="@+id/btn_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/btn_red"
        android:text="@string/signin"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password_signin" />

</androidx.constraintlayout.widget.ConstraintLayout>